--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: '3.9'
 
       - name: Install dependencies
-        run: pip install requests
+        run: pip install requests beautifulsoup4
 
       - name: Run scraper
         run: python main.py
