--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -1,7 +1,10 @@
-name: Daily Subsidy Scraper
+name: Daily Subsidy Portal Update
 
 on:
-  workflow_dispatch: # 手動実行ボタンを表示
+  schedule:
+    # 毎日 00:00 UTC (日本時間 09:00) に実行
+    - cron: '0 0 * * *'
+  workflow_dispatch: # 手動実行ボタンも残す
 
 jobs:
   build:
@@ -11,16 +14,16 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: [email protected]
         with:
           python-version: '3.9'
 
       - name: Install dependencies
-        run: pip install requests beautifulsoup4
+        run: pip install requests
 
-      - name: Run scraper
-        run: python main.py
+      - name: Run main.py
         env:
           AIRTABLE_TOKEN: ${{ secrets.AIRTABLE_TOKEN }}
           AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID }}
           AIRTABLE_TABLE_NAME: ${{ secrets.AIRTABLE_TABLE_NAME }}
+        run: python main.py
