--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -1,41 +1,39 @@
-name: deploy
+name: Auto Update Subsidy Database
+
 on:
-  push:
-    branches: [main]
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * *' # 毎日日本時間午前9時（UTC 0時）に実行
+  workflow_dispatch:      # 手動実行ボタンを有効化
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+  contents: write         # リポジトリへの書き込み権限を明示的に許可
 
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
-    # 物理的公開に必須な環境定義
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+
       - name: Install dependencies
-        run: pip install requests beautifulsoup4
-      - name: Run script
+        run: |
+          pip install requests beautifulsoup4
+
+      - name: Run script to fetch and merge data
         run: python main.py
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+
+      - name: Commit and Push changes
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add subsidies_db.json index.html
+          # 変更がある場合のみコミットしてプッシュ
+          if ! git diff --cached --exit-code; then
+            git commit -m "chore: auto-update database [$(date +'%Y-%m-%d')]"
+            git push
+          fi
